--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+PROJECT_1/data/dst-3.0_16_1_hh_database.csv
+SF/PYTHON_14/data/Data_TSUM.xlsx
+SF/PYTHON_14/data/diabetes_data.csv
+SF/PYTHON_14/data/output.xlsx
+SF/PYTHON_14/data/sber_data.csv
